[project]
name = "vllm-sr-custom-training"
version = "0.0.1"
description = "Out-of-upstream training experiments for vLLM Semantic Router."
requires-python = ">=3.10,<3.13"

dependencies = [
    "torch>=2.5.0",
    "transformers>=4.44.0,<5.0",
    "peft>=0.13.0",
    "datasets>=2.20.0",
    "accelerate>=0.34.0",
    "scikit-learn>=1.5",
    "pandas>=2.2",
    "wandb>=0.18",
    "huggingface_hub>=0.24",
    "python-dotenv>=1.0",
    "tqdm>=4.66",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
]

[tool.uv]
package = false
index-strategy = "unsafe-best-match"

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
